--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Muhammad Taha",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
@@ -21,11 +21,13 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/network": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/sqlite": "^5.3.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/toast": "^5.3.0",
     "@ionic/angular": "^4.1.0",
+    "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-x-toast": "^2.7.2",
     "cordova-sqlite-storage": "^3.2.0",
     "core-js": "^2.5.4",
@@ -62,7 +64,8 @@
   "cordova": {
     "plugins": {
       "cordova-sqlite-storage": {},
-      "cordova-plugin-x-toast": {}
+      "cordova-plugin-x-toast": {},
+      "cordova-plugin-network-information": {}
     }
   }
 }
